After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740381 - Problems with gettext in NM code
Problems with gettext in NM code
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-11-19 17:49 UTC by Yuri Chornoivan
Modified: 2014-11-20 11:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Yuri Chornoivan 2014-11-19 17:49:02 UTC
Some new strings are highly problematic from gettext POV. Namely,

/libnm-core/nm-setting-connection.c:880:
_("Slave connections need a valid '" NM_SETTING_CONNECTION_MASTER "' property"));

this string is a puzzle and cannot be extracted properly (only "Slave connections need a valid '" extracted).

901:
_("Cannot set '" NM_SETTING_CONNECTION_MASTER "' without '" NM_SETTING_CONNECTION_SLAVE_TYPE "'"));

same problem (only "Cannot set '" extracted).

939:
_("Detect a slave connection with '" NM_SETTING_CONNECTION_MASTER "' set and a port type '%s'. '" NM_SETTING_CONNECTION_SLAVE_TYPE "' should be set to '%s'"),

same problem (only "Detect a slave connection with '" extracted).

/clients/cli/settings.c:1971:
g_set_error (error, 1, 0, _("'%"G_GINT64_FORMAT"' is not valid; use <%"G_GINT64_FORMAT"-%"G_GINT64_FORMAT">"),
		             val, pspec_int->minimum, pspec_int->maximum);

gettext has problems with G_GINT64_FORMAT. For the details, please refer to https://bugzilla.gnome.org/show_bug.cgi?id=625083


Many thanks in advance for fixing these problems. If you do not mind, please also fix

/clients/cli/agent.c:60

reponse -> response
Comment 1 Thomas Haller 2014-11-20 11:44:05 UTC
Thank you for your detailed bug report!!

patch pushed to master:

http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=943db815eeca43e5d1086b80feee77840655a781